<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="distancia">Distância</string>
    <string name="autonomia">Autonomia</string>
    <string name="kilometro_por_litro">Kilometro por litro</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="seu_gasto_total_ser_de">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="calcular">Calcular</string>
    <string name="r_0">R$ 0</string>
    <string name="preencha_campos">Preencher todos os campos.</string>
</resources>